# moneyzz

./: .gitignore  Cargo.toml  Makefile  Procfile  README.md
db/: Dockerfile  db.sql  dockem.sh
src/: db.rs  error.rs  handler.rs  handlers.rs  main.rs  model.rs  service.rs
src/handlers/: account_handler.rs  expense_handler.rs
src/model/: account.rs  expense.rs
src/service/: account_service.rs  expense_service.rs
