[package]
name = "moneyzz"
version = "0.1.0"
authors = ["Cody Martin <Cody.Martin@nike.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
warp = "0.2"
mobc-postgres = { version = "0.5", features = ["with-chrono-0_4"] }
mobc = "0.5"
serde = {version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
log = "0.4"
pretty_env_logger = "0.3"

[profile.dev]
debug = 0